--- a/package.json
+++ b/package.json
@@ -19,7 +19,13 @@
   "devDependencies": {
     "autoprefixer": "^10.1.0",
     "cssnano": "^4.1.10",
+    "parcel-plugin-clean-dist": "0.0.6",
     "postcss": "^8.2.1",
-    "parcel-plugin-clean-dist": "0.0.6"
+    "sass": "^1.30.0"
+  },
+  "dependencies": {
+    "animejs": "^3.2.1",
+    "in-viewport": "^3.6.0",
+    "splitting": "^1.0.6"
   }
 }
